// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article flag 1`] = `
<div>
  <div />
  <div
    aria-label="No Colour Flag"
  >
    no colour
  </div>
</div>
`;

exports[`2. red article flag 1`] = `
<div>
  <div />
  <div
    aria-label="Coloured Red Flag"
  >
    coloured red
  </div>
</div>
`;

exports[`3. hex colour article flag 1`] = `
<div>
  <div />
  <div
    aria-label="Coloured Red Flag"
  >
    coloured red
  </div>
</div>
`;

exports[`4. rgba colour article flag 1`] = `
<div>
  <div />
  <div
    aria-label="Coloured Red Flag"
  >
    coloured red
  </div>
</div>
`;

exports[`5. new article flag 1`] = `
<div>
  <div />
  <div
    aria-label="new Flag"
  >
    new
  </div>
</div>
`;

exports[`6. updated article flag 1`] = `
<div>
  <div />
  <div
    aria-label="updated Flag"
  >
    updated
  </div>
</div>
`;

exports[`7. exclusive article flag 1`] = `
<div>
  <div />
  <div
    aria-label="exclusive Flag"
  >
    exclusive
  </div>
</div>
`;

exports[`8. sponsored article flag 1`] = `
<div>
  <div />
  <div
    aria-label="sponsored Flag"
  >
    sponsored
  </div>
</div>
`;

exports[`9. article flags 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        aria-label="updated Flag"
      >
        updated
      </div>
    </div>
  </div>
  <div>
    <div>
      <div />
      <div
        aria-label="exclusive Flag"
      >
        exclusive
      </div>
    </div>
  </div>
</div>
`;

exports[`10. article flags with no flags 1`] = `null`;
